--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="45-Five">
+    <wb-module deploy-name="bigdata2020-5">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="45-Five"/>
-        <property name="java-output-path" value="/45-Five/build/classes"/>
+        <property name="context-root" value="bigdata2020-5"/>
+        <property name="java-output-path" value="/bigdata2020-5/build/classes"/>
     </wb-module>
 </project-modules>
