--- a/src/main/webapp/WEB-INF/views/assets/css/info_join.css
+++ b/src/main/webapp/WEB-INF/views/assets/css/info_join.css
@@ -66,7 +66,7 @@
             width: 75%;
         }
         /* 우편번호 영역 크기 재설정 */
-        #postcode{
+        #user_postcode{
             width: 40%;
         }
 
