--- a/src/main/webapp/WEB-INF/views/assets/css/main_myQnaUpdate.css
+++ b/src/main/webapp/WEB-INF/views/assets/css/main_myQnaUpdate.css
@@ -12,10 +12,10 @@ div#content {
 
 }
 /* qna 제목 부모요소 */
-#qna_title {
-	width: 100%;
+#user_title {
 	display: block;
-	padding: 25px 0;
+	width: 100%;
+	padding: 20px 0;
 	border-bottom: 1px solid #ccc;
 }
 
@@ -31,7 +31,7 @@ div#content {
 }
 
 /* qna 제목 input 요소 */
-.form-control.pull-left {
+#qna_title {
 	display: inline-block;
 	width: 80%;
 	height: 40px;
@@ -39,12 +39,19 @@ div#content {
 
 /* qna 내용 부모요소 */
 #qna_w_content {
-	padding-top: 25px;
-	width: 98%;
-	margin:auto;
+	width: 100%;
+	padding: 0 20px 20px 15px;
+	border-bottom: 2px solid #ccc;	
 }
 
-#qna_w_btn {
+/* qna 내용 input 요소 */
+#qna_content {
+	display: inline-block;
+	width: 100%;
+    line-height: 20px;
+}
+
+#btn {
 	height: 34px;
 	line-height: 34px;
 	margin: 20px 10px;
