--- a/src/main/webapp/WEB-INF/views/assets/css/main_noticeDetails.css
+++ b/src/main/webapp/WEB-INF/views/assets/css/main_noticeDetails.css
@@ -11,11 +11,11 @@
 }
 
 /* form 안의 영역 */
-#mynotice {
+#myNotice {
 	width: 100%;
 }
 
-/* 제목 영역 qna*/
+/* 제목 영역 notice*/
 #notice {
 	width: 100%;
 	padding: 20px 30px;
@@ -33,7 +33,7 @@
 
 /* 제목 글씨 */
 .notice_title {
-	width: 82%;
+	width: 100%;
 	height: 34px;
 	line-height: 34px;
 	font-weight: bold;
@@ -73,6 +73,7 @@
 	width: 100%;
 	padding: 20px 30px;
 	line-height: 30px;
+	min-height: 250px;
 }
 
 .show_list {
@@ -83,4 +84,5 @@
 
 .show {
 	width: 20%;
-}	
+}
+
