--- a/src/main/webapp/WEB-INF/views/assets/css/main_qnaList.css
+++ b/src/main/webapp/WEB-INF/views/assets/css/main_qnaList.css
@@ -6,49 +6,48 @@
     padding-bottom: 10px;
 }
 
+/* 조회 없다 null */
+#null {
+	width: 100%;
+	height: 250px;
+	line-height: 250px;
+	text-align: center;
+	font-weight: bold;
+}
+
 /* qna게시판 전체 영역 */
 #qna {
 	width: 100%;
+	padding: 20px 0;
+	border-bottom: 1px solid #ccc;
 }
 
-/* qna 관리자 목록 */
-#qna_notice {
-	width: 100%;
-}
-
-/* qna_notice ul 영역*/
-#qna_notice_list {
-	background-color: #eee;
+#qna:nth-child(1) {
 	border-top: 2px solid #ccc;
 }
 
-/* 각 li 하나당 영역 */
-#qna_notice_list > li {
-	width: 100%;
-	border-bottom: 1px solid #ccc;
-	padding: 20px 0;
-}
 
-/* qna 필독 */
-.dog {
-	color: #FF0000;
-}
 /* qna 제목 */
 .qna_title {
 	display: block;
 	width: 100%;
-	height: 20px;
-	font-size: 20px;
-	font-weight: bold;
+	height: 30px;
+	line-height: 30px;
+	margin-bottom: 10px; 
 	padding: 0 30px;
-	margin-bottom: 15px;
+	font-size: 20px;
 	white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: ellipsis;    
+}
+
+.qna_title > span > a {
+	color: #07031A;
+	font-weight: bold; 
 }
 
 /* 작성자 , 작성일, 조회수 */
-.nada {
+.name_day_hit {
 	display: block;
 	width: 100%;
 	line-height: 14px;
@@ -66,49 +65,61 @@
 }
 
 /* 작성일 */
-.qna_data {
+.date {
 	display: inline-block;
 	padding: 0 10px;
 	border-right: 1px solid #ccc;
 }
 
 /* 조회수 */
-.qna_count {
+.hit {
 	display: inline-block;
 	padding-left: 10px;
 }
 
-/* 회원 각 하나당 */
-#qna_list li {
-	width: 100%;
-	border-bottom: 1px solid #ccc;
-	padding: 20px 0;
-}
-
-/* 회원 li 마지막 */
-#member_qna li:nth-last-child(1) {
-	border-bottom: 2px solid #ccc;
-}
-
-
-/* 회원 qna */
-#member_qna {
-	width: 100%;
-}
 
 /* 검색창, 글쓰기 부모 영역*/
-#search {
+#form {
 	width: 90%;
 	margin: auto;
+	padding: 14px 0;
 }
 
-/* 검색창 크기*/
-.search_text {
-	width: 40%;
+/* 검색 form 영역 */
+#search {
+	width: 60%;
 	height: 34px;
 }
 
-/* 페이징 버튼 */
-.pagemove{
+/* 글쓰기 버튼 */
+.write {
+	display: inline-block;
+	width: 20%;
+	height: 34px;
+	border-radius: 4px 4px 4px 4px;
+	background-color: #FFCB74;
+	line-height: 34px;
+	color: #07031A;
+	font-weight: bold;
+	font-size: 14px;
 	text-align: center;
+}
+
+/* 검색창 크기 */
+.search_text {
+	width: 75%;
+	height: 34px;
+} 
+
+/* 검색버튼 */
+.search {
+	height: 34px;
+	
+}
+
+.p {
+	width: 100%;
+	padding: 10px 40px;
+	text-align: center;
+	border-top: 2px solid #ccc;
 }
